--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -16,6 +16,6 @@
 //@import "pages";
 @import "elements";
 //@import "forms";
-//@import "header";
+@import "header";
 //@import "footer";
 @import "collections";
