--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -42,7 +42,7 @@
                     <a href="/">
                         <picture class="logo">
                             <source srcset="/images/logo.svg" type="image/svg">
-                            <img src="/images/logo.png" alt="SokoLocal">
+                            <img src="/images/logo.png" alt="SokoLocal" width="70" height="70" >
                         </picture>
                     </a>
                 </div>
