--- a/public/styles/_layout.scss
+++ b/public/styles/_layout.scss
@@ -12,7 +12,6 @@ body {
 
 		#header {
 			bottom: 0;
-			background: transparentize($secondary, 0.5);
 		}
 	}
 }
@@ -24,7 +23,7 @@ body {
 		left: 0;
 		right: 0;
 		z-index: 10;
-	
+	background: transparentize($grey-darkest, 0.2);
 	backdrop-filter: blur(3px);
 
 	.header-inner {
@@ -39,10 +38,6 @@ body {
 
 	.container-nav {
 		flex: 0 1 auto;
-	}
-
-	@include media-breakpoint-up(md){
-		background: none;
 	}
 }
 
