- Fixing broken link

--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -45,7 +45,7 @@
 						that a passionate small group of people including myself turned into a successful online community and resource
 						with a companion iPhone and Android app that challange UX norms to provide the best experience for discovering
 						all things beer.",
-		"url": "https://justbeerapp.ca",
+		"url": "https://justbeerapp.com",
 		"tasks": [
 			"Concept Design", "Wire-framing", "Design", "HTML5", "CSS3", "JS", "jQuery", "AngularJS", "Symfony", "Twig", "React Native"
 		]
