--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -126,6 +126,18 @@
             <script type="text/javascript">
                 DEBUG_MODE = false;
             </script>
+            
+            <!-- Google Analytics -->
+            <script>
+                (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+                })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+                ga('create', 'UA-15463227-1', 'auto');
+                ga('send', 'pageview');
+            </script>
+            <!-- End Google Analytics -->
         {% else %}
             {# Scripts - Dev #}
             <script src="/scripts/third-party/jquery-3.6.0.js"></script>
