--- a/public/styles/_settings.scss
+++ b/public/styles/_settings.scss
@@ -14,6 +14,8 @@ $secondary:		$grey-medium;
 
 // Fonts
 $font-standard: 'Source Sans Pro', sans-serif;
+$font-serif:    'Source Serif Pro', serif;
+$font-accent:   $font-serif;
 
 // Spacing
 $space:			16px;
